--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -563,105 +563,111 @@ end
 #   |_) _. ._ _ o ._   _    /  |   |
 #   |  (_| | _> | | | (_|   \_ |_ _|_
 #                      _|
-parser = OptionParser.new
-
-options = { tracing_mode: 'default', profile: true, backend: ['omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'],
-            analysis: true,
-            'traced-ranks': Set[-1],
-            'max-name-size': 80,
-            debug: Logger::FATAL }
-
-# Tracing
-parser.on('-m', '--tracing-mode=MODE', %w[minimal default full], 'Define the category of events traced')
-parser.on('--traced-ranks=RANK', Array, 'Select with MPI rank will be traced.',
-          'Use -1 to mean all ranks.',
-          "Default: #{options[:'traced-ranks'].join(',')}") do |ranks|
-  ranks.map do |r|
-    if r.match?(/^\d+$/)
-      r.to_i
-    else
-      raise(OptionParser::ParseError,
-            "Invalid value (#{r}). Only integer accepted")
-    end
-  end.to_set
-end
-parser.on('--[no-]profile', 'Trigger for device activities profiling')
-parser.on('--[no-]analysis', 'Trigger for analysis')
-
-# General Options
-parser.on('-b', '--backend BACKEND', Array, "Select which and how backends' need to handled.",
-          'Format: backend_name[:backend_level],...',
-          "Default: #{options[:backend].join(',')}")
-
-# Analysis
-parser.on('-r', '--replay [PATH]', 'Replay traces for post-mortem analysis')
-parser.on('-t', '--trace', 'Pretty print the trace')
-parser.on('-l', '--timeline', 'Dump a timeline of the trace.',
-          "This will create a 'out.pftrace' file that can be opened in perfetto: https://ui.perfetto.dev/#!/viewer")
-## Tally Specific Options
-parser.on('-j', '--json', 'The tally will be dumped as json')
-parser.on('-e', '--extended', 'The tally will be printed for each Hostname / Process / Thread / Device')
-parser.on('-k', '--kernel-verbose',
-          'The tally will report kernels execution time with SIMD width and global/local sizes')
-parser.on('--max-name-size SIZE',
-          OptionParser::DecimalInteger,
-          'Maximum size allowed for kernels names.',
-          'Use -1 to mean no limit.',
-          "Default: #{options[:'max-name-size']}")
-
-parser.on('--metadata', 'Display trace Metadata')
-parser.on('-v', '--version', 'Display THAPI version')
-parser.on('-h', '--help', 'Display this message')
-
-parser.on('--debug [LEVEL]', OptionParser::DecimalInteger, 'Set the Level of debug',
-          "By default the debug level is #{options[:debug]}.",
-          "If LEVEL is omitted the debug level with be set to #{Logger::INFO}") { |d| d || Logger::INFO }
-
-def print_help_and_exit(parser, exit_code: 1)
-  puts(parser.help)
-  puts(<<~EOF
-                                                          __
-    For complaints, praises, or bug reports please use: <(o )___
-       https://github.com/argonne-lcf/THAPI              ( ._> /
-       or send email to {apl,bvideau}@anl.gov             `---'
-  EOF
-      )
-  exit(exit_code)
-end
-
-# Parsing ARGV
-print_help_and_exit(parser) if ARGV.empty?
-
-begin
-  parser.parse!(into: options)
-rescue StandardError => e
-  puts("ERROR: #{e}")
-  print_help_and_exit(parser)
-end
-
-options[:'backend-name'] = options[:backend].map { |name_level| name_level.split(':').first }
-OPTIONS = options.freeze
-
-# Setup Logger
-LOGGER = Logger.new($stdout)
-LOGGER.level = OPTIONS[:debug]
-LOGGER.debug(OPTIONS)
-
-# We don't rely on the Parser-OPT default help, as it doesn't print the footer
-print_help_and_exit(parser, exit_code: 0) if OPTIONS.include?(:help)
-if OPTIONS.include?(:version)
-  puts(File.read(File.join(DATADIR, 'version')))
-  exit(0)
-end
 
 def last_trace_saved
   Dir[File.join(env_fetch_first('HOME'), 'thapi-traces', 'thapi*')].max_by { |f| File.mtime(f) }
 end
 
-# Right now, `replay` means no tracing.
-# But we don't have a way of disabling post-processing
-folder = OPTIONS.include?(:replay) ? OPTIONS[:replay] || last_trace_saved : trace_and_on_node_processing(ARGV)
-if mpi_master?
-  puts("THAPI: Trace Location #{folder}")
-  global_processing(folder) if OPTIONS[:analysis]
+# Avoid load problem
+if __FILE__ == $0
+
+  parser = OptionParser.new
+
+  options = { tracing_mode: 'default', profile: true, backend: ['omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'],
+              analysis: true,
+              'traced-ranks': Set[-1],
+              'max-name-size': 80,
+              debug: Logger::FATAL }
+
+  # Tracing
+  parser.on('-m', '--tracing-mode=MODE', %w[minimal default full], 'Define the category of events traced')
+  parser.on('--traced-ranks=RANK', Array, 'Select with MPI rank will be traced.',
+            'Use -1 to mean all ranks.',
+            "Default: #{options[:'traced-ranks'].join(',')}") do |ranks|
+    ranks.map do |r|
+      if r.match?(/^\d+$/)
+        r.to_i
+      else
+        raise(OptionParser::ParseError,
+              "Invalid value (#{r}). Only integer accepted")
+      end
+    end.to_set
+  end
+  parser.on('--[no-]profile', 'Trigger for device activities profiling')
+  parser.on('--[no-]analysis', 'Trigger for analysis')
+
+  # General Options
+  parser.on('-b', '--backend BACKEND', Array, "Select which and how backends' need to handled.",
+            'Format: backend_name[:backend_level],...',
+            "Default: #{options[:backend].join(',')}")
+
+  # Analysis
+  parser.on('-r', '--replay [PATH]', 'Replay traces for post-mortem analysis')
+  parser.on('-t', '--trace', 'Pretty print the trace')
+  parser.on('-l', '--timeline', 'Dump a timeline of the trace.',
+            "This will create a 'out.pftrace' file that can be opened in perfetto: https://ui.perfetto.dev/#!/viewer")
+  ## Tally Specific Options
+  parser.on('-j', '--json', 'The tally will be dumped as json')
+  parser.on('-e', '--extended', 'The tally will be printed for each Hostname / Process / Thread / Device')
+  parser.on('-k', '--kernel-verbose',
+            'The tally will report kernels execution time with SIMD width and global/local sizes')
+  parser.on('--max-name-size SIZE',
+            OptionParser::DecimalInteger,
+            'Maximum size allowed for kernels names.',
+            'Use -1 to mean no limit.',
+            "Default: #{options[:'max-name-size']}")
+
+  parser.on('--metadata', 'Display trace Metadata')
+  parser.on('-v', '--version', 'Display THAPI version')
+  parser.on('-h', '--help', 'Display this message')
+
+  parser.on('--debug [LEVEL]', OptionParser::DecimalInteger, 'Set the Level of debug',
+            "By default the debug level is #{options[:debug]}.",
+            "If LEVEL is omitted the debug level with be set to #{Logger::INFO}") { |d| d || Logger::INFO }
+
+  def print_help_and_exit(parser, exit_code: 1)
+    puts(parser.help)
+    puts(<<~EOF
+                                                            __
+      For complaints, praises, or bug reports please use: <(o )___
+         https://github.com/argonne-lcf/THAPI              ( ._> /
+         or send email to {apl,bvideau}@anl.gov             `---'
+    EOF
+        )
+    exit(exit_code)
+  end
+
+  # Parsing ARGV
+  print_help_and_exit(parser) if ARGV.empty?
+
+  begin
+    parser.parse!(into: options)
+  rescue StandardError => e
+    puts("ERROR: #{e}")
+    print_help_and_exit(parser)
+  end
+
+  options[:'backend-name'] = options[:backend].map { |name_level| name_level.split(':').first }
+  OPTIONS = options.freeze
+
+  # Setup Logger
+  LOGGER = Logger.new($stdout)
+  LOGGER.level = OPTIONS[:debug]
+  LOGGER.debug(OPTIONS)
+
+  # We don't rely on the Parser-OPT default help, as it doesn't print the footer
+  print_help_and_exit(parser, exit_code: 0) if OPTIONS.include?(:help)
+  if OPTIONS.include?(:version)
+    puts(File.read(File.join(DATADIR, 'version')))
+    exit(0)
+  end
+
+  # Right now, `replay` means no tracing.
+  # But we don't have a way of disabling post-processing
+  folder = OPTIONS.include?(:replay) ? OPTIONS[:replay] || last_trace_saved : trace_and_on_node_processing(ARGV)
+  if mpi_master?
+    puts("THAPI: Trace Location #{folder}")
+    global_processing(folder) if OPTIONS[:analysis]
+  end
+
 end
