--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -280,7 +280,7 @@ def raise_if_command_invalid(command, trace)
   when 'trace'
     raise('THAPI Trace: Cannot show the trace of an interval or aggregated trace') if %w[interval aggreg].include?(thapi_metadata(trace)[:type])
   when 'timeline'
-    raise('THAPi Timeline: Cannot show the trace of an aggreg trace') if %w[aggreg].include?(thapi_metadata(trace)[:type])
+    raise('THAPi Timeline: Cannot show the timeline of an aggregated trace') if %w[aggreg].include?(thapi_metadata(trace)[:type])
   end
 end
 
