--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -600,7 +600,7 @@ if __FILE__ == $PROGRAM_NAME
 
   parser.on('--trace-output PATH', 'Define where the ctf trace will be saved',
             'Default path is something like: $THAPI_HOME/thapi-traces/thapi--%Y-%m-%d--%Hh%Mm%Ss',
-            '$THAPI_HOME default to $HOME') do |p|
+            '$THAPI_HOME defaults to $HOME') do |p|
     raise(OptionParser::ParseError, "#{p} already exists") if File.exist?(p)
 
     p
