--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -25,6 +25,7 @@ require 'logger'
 require 'set'
 require 'securerandom'
 require 'yaml'
+require 'date'
 
 def exec(cmd, opts: {}, debug: true)
   return Open3.capture3(opts, cmd).first unless debug
