--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -562,6 +562,7 @@ def global_processing(folder)
   else
     args += ['tally']
     args << '--display_kernel_verbose' if OPTIONS.include?(:'kernel-verbose')
+    args << '--display_metadata' if OPTIONS.include?(:metadata)
     args << '--display_name_max_size' << OPTIONS[:'max-name-size'].to_s
     args << '--display_mode' << 'json' if OPTIONS.include?(:json)
     args << '--backends' << backends
@@ -652,6 +653,7 @@ if __FILE__ == $PROGRAM_NAME
             'Maximum size allowed for kernels names.',
             'Use -1 to mean no limit.', default: 80)
 
+  parser.on( '--metadata', 'Display the trace metadata')
   parser.on('-v', '--version', 'Print the Version String') do
     puts File.read(File.join(DATADIR, 'version'))
     exit
